# gui

./: Cargo.toml  README.md
examples/: empty.rs  frames.rs  image.rs  pivot.rs  pixel.rs  shapes.rs  text.rs
src/: drawing_data.rs  font.rs  img.rs  lib.rs  loader.rs  text_input.rs  texture_atlas.rs  transform.rs
src/application/: application.rs  application_builder.rs  mod.rs
src/color/: color.rs
src/frame/: frame.rs
src/math/: mat2.rs  mod.rs  vec2.rs
src/rendering/: anchor.rs  ellipse.rs  frame.rs  image.rs  line.rs  mod.rs  rect.rs  rect_mask.rs  text.rs  traits.rs
src/rendering/mask/: mod.rs  rect_mask.rs
src/shaders/: line.glsl  no_transform.glsl  simple_transform.glsl
src/shaders/fragment/: ellipse.glsl  fill.glsl  line.glsl  text.glsl  texture.glsl
src/shaders/vertex/: no_transform.glsl  simple_transform.glsl  texture.glsl
src/state/: mod.rs  state.rs  state_data.rs  transition.rs
tests/: states.rs
