[package]
name = "fumarole"
version = "0.1.0"
authors = ["Hjalte Nannestad"]
edition = "2018"
license = "MIT"
description = "a simple 2d engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.26.0-alpha6"
image = "0.22"
rusttype = "^0.3.0"
serde = { version = "*", features = ["derive"] }
